# gnome-2048

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile.am  NEWS  README  README.md  autogen.sh  code-of-conduct.md  configure.ac  gnome-2048.doap  meson.build  meson_post_install.py
data/: Makefile.am  congrats.ui  game-headerbar.ui  game.ui  gnome-2048.6  gnome-2048.appdata.xml.in  gnome-2048.css  gnome-2048.desktop.in  help-overlay.ui  mainwindow.ui  menus.ui  meson.build  org.gnome.2048.gschema.xml  org.gnome.TwentyFortyEight.appdata.xml.in  org.gnome.TwentyFortyEight.desktop.in  org.gnome.TwentyFortyEight.gschema.xml  org.gnome.TwentyFortyEight.metainfo.xml.in  org.gnome.TwentyFortyEight.service.in  org.gnome.gnome-2048.appdata.xml.in  org.gnome.gnome-2048.desktop.in  preferences.ui  scoreboard.ui  style.css
data/icons/hicolor/: Makefile.am
flatpak/: org.gnome.Gnome2048.json  org.gnome.TwentyFortyEight-3.30.json  org.gnome.TwentyFortyEight-master.json  org.gnome.TwentyFortyEight.json  org.gnome.TwentyFortyEightDevel.json
help/: LINGUAS  Makefile.am  meson.build
help/C/: basics.page  controls.page  index.page  keybindings.page  objective.page  scores.page
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fa/: fa.po
help/hu/: hu.po
help/kab/: kab.po
help/kk/: kk.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/sr/: sr.po
help/sv/: sv.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
po/: LINGUAS  POTFILES.in  POTFILES.skip  be.po  bg.po  bs.po  ca.po  ckb.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ka.po  kab.po  kk.po  ko.po  lt.po  meson.build  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  (+7 more)
snap/: snapcraft.yaml
src/: Makefile.am  about.rs  application.rs  application.vala  cli.rs  cli.vala  colors.rs  config.rs  config.rs.in  config.vapi  game-headerbar.vala  game-window.vala  game.rs  game.vala  game_window.rs  gnome-2048.gresource.xml  grid.rs  grid.vala  main.rs  meson.build  org.gnome.TwentyFortyEight.gresource.xml  scores.rs  shift.rs  test-tw12ht.vala  view.vala
subprojects/: README.md  libgnome-games-support.wrap
subprojects/libgnome-games-support/: .meson-subproject-wrap-hash.txt
subprojects/libgnome-games-support/games/: theme-selector-dialog.vala
subprojects/libgnome-games-support/games/scores/: context.vala  dialog.vala
